# csvcompare

./: .gitignore  README.md  build_executable.py  build_macos.sh  build_windows.ps1  pyi_entry.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_windows.bat  test  test2  warehouse_detail.csv
.github/workflows/: build.yml
data/: source_a.xlsx  source_b.csv
examples/: mapping.example.json
examples/kibana-scenario/: README.md  kibana_logs.csv  mapping.json  report.txt  source_a_ops.csv
examples/ms-to-sec-scenario/: mapping.json  report.txt  source_a.csv  source_b.csv
examples/pivot-sum-demo/: mapping.json  report.txt  source_a.csv  source_b.csv
examples/team-duration-scenario/: mapping.json  report_broken_keys.txt  report_dirty_keys.txt  source_a.csv  source_b.csv  source_b_broken_keys.csv  source_b_dirty_keys.csv
examples/thousands-separator-scenario/: mapping.json  report.txt  source_a.csv  source_b.csv
examples/timepivot-demo/: mapping.json  report.txt  source_a.csv  source_b.csv
examples/warehouse-scenario/: mapping.json  report.txt  source_a.csv
scripts/: generate_sample_data.py  verify_conversion.py
src/score_reconciler/: __init__.py  __main__.py  cli.py  comparator.py  loader.py  mapping.py  reporter.py
tests/: test_comparator.py  test_loader.py  test_mapping.py
