[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "score-reconciler"
version = "0.1.0"
description = "Compare Name/TotalScore data between two sources (A and B) and report mismatches for QA."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "QA Tooling" }]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
build = ["pyinstaller>=6.0"]

[project.scripts]
score-reconciler = "score_reconciler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
